src/main/metadata-au/objects/Dealer_Offering__c.object
<CustomObject>
    <description>Campaign: Automatically created/updated/deleted by trigger based on Package Item and Participating Dealer records.</description>
    <fields>
        <fullName>Campaign_Offering__c</fullName>
        <label>Campaign Offering</label>
        <referenceTo>Campaign_Offering__c</referenceTo>
        <relationshipLabel>Dealer Offerings</relationshipLabel>
        <relationshipName>Dealer_Offerings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Offerings</relationshipLabel>
        <relationshipName>Dealer_Offerings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Package_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dealer Offering link to package.  Just backend field, no need to add to page layout.
When update/delete on package will influence on the related dealer offering record.</description>
        <label>Package Item</label>
        <referenceTo>Package_Item__c</referenceTo>
        <relationshipLabel>Dealer Offerings</relationshipLabel>
        <relationshipName>Dealer_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_End_Date__c</fullName>
        <label>Session End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_Start_Date__c</fullName>
        <label>Session Start Date</label>
        <type>Date</type>
    </fields>
    <label>Dealer Offering</label>
    <nameField>
        <displayFormat>DCO-{0000}</displayFormat>
        <label>Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>  